ID-4123 [FIX] Field height of the text area is too narrow (#642)

--- a/css/form.css
+++ b/css/form.css
@@ -1095,6 +1095,10 @@ html[dir="rtl"] .radio.radio-icon input[type="radio"] + label > span.check {
   border-radius: 4px;
 }
 
+.tox.tox-tinymce {
+  min-height: 130px !important;
+}
+
 @media screen and (max-width: 1280px) {
   .tox-toolbar__primary {
     justify-content: space-between;
